css/styles.css
/* ... */
.timeline > li:last-child {
  margin-bottom: 0;
}
.timeline .timeline-heading h4 {
  margin-top: 0;
  color: inherit;
}
.timeline .timeline-heading h4.subheading {
  text-transform: none;
}
.timeline .timeline-body > ul,
.timeline .timeline-body > p {
  margin-bottom: 0;
}

@media (min-width: 768px) {
  .timeline:before {
    left: 50%;
  }
  .timeline > li {
    min-height: 100px;
    margin-bottom: 100px;
  }
  .timeline > li .timeline-panel {
    float: left;
    width: 41%;
    padding: 0 20px 20px 30px;
    text-align: right;
  }
  .timeline > li .timeline-image {
    left: 50%;
    width: 100px;
    height: 100px;
    margin-left: -50px;
  }
  .timeline > li .timeline-image h4 {
    font-size: 13px;
    line-height: 18px;
    margin-top: 16px;
  }
  .timeline > li.timeline-inverted > .timeline-panel {
    float: right;
    padding: 0 30px 20px 20px;
    text-align: left;
  }
}
@media (min-width: 992px) {
  .timeline > li {
    min-height: 150px;
  }
  .timeline > li .timeline-panel {
    padding: 0 20px 20px;
  }
  .timeline > li .timeline-image {
    width: 150px;
    height: 150px;
    margin-left: -75px;
  }
  .timeline > li .timeline-image h4 {
    font-size: 18px;
    line-height: 26px;
    margin-top: 30px;
  }
  .timeline > li.timeline-inverted > .timeline-panel {
    padding: 0 20px 20px;
  }
}
@media (min-width: 1200px) {
  .timeline > li {
    min-height: 170px;
  }
  .timeline > li .timeline-panel {
    padding: 0 20px 20px 100px;
  }
  .timeline > li .timeline-image {
    width: 170px;
    height: 170px;
    margin-left: -85px;
  }
  .timeline > li .timeline-image h4 {
    margin-top: 40px;
  }
  .timeline > li.timeline-inverted > .timeline-panel {
    padding: 0 100px 20px 20px;
  }
}

.container-img {
  width: 100%;
  display: grid;
  grid-auto-flow: dense;
  grid-template:
    "1fr 1fr 1fr 1fr 1fr" 33.33vh
    "1fr 1fr 1fr 1fr 1fr" 33.33vh
    "1fr 1fr 1fr 1fr 1fr" 33.33vh
    "1fr 1fr 1fr 1fr 1fr" 33.33vh;
}

.container-img .box {
  position: relative;
  background: #ccc;
}
.container-img .box.a {
  grid-row: span 2;
}
.container-img .box.b,
.container-img .box.f,
.container-img .box.h,
.container-img .box.n,
.container-img .box.m 
{
  grid-column: span 2;
}
.container-img .box img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}
@media (max-width: 991px) {
  .container-img {
    grid-template:
      "1fr 1fr 1fr" 250px
      "1fr 1fr 1fr" 250px
      "1fr 1fr 1fr" 250px
      "1fr 1fr 1fr" 250px
      "1fr 1fr 1fr" 250px
       "1fr 1fr 1fr" 250px;
  }
}
@media (max-width: 768px) {
  .container-img {
    grid-template:
      "1fr 1fr" 200px
      "1fr 1fr" 200px
      "1fr 1fr" 200px
      "1fr 1fr" 200px
      "1fr 1fr" 200px
      "1fr 1fr" 200px
      "1fr 1fr" 200px
      "1fr 1fr" 200px;
  }
}
.container-img .box.m {
  grid-column: span 1;
}



    #canvas1 {
  position: inherit;
  top: 0;
  left:0;
  width:100%;
  height:auto;
  max-width: 100%
  min-width:25%;
}

@media screen and (max-width: 600px) {
  #canvas1 {
    visibility: hidden;
    clear: both;
    float: left;
    margin: 10px auto 5px 20px;
    width: 28%;
    display: none;
  }
}


section#contact {
  background-image: url("../assets/img/map-image.png");
  background-repeat: no-repeat; 
  background-size:100%;
  line-height: 0px;

}

section#services {
  background-image: url("../assets/img/seaweed.png");
  background-repeat: no-repeat; 
  background-size:100%;
  line-height: 0px;
  background-position: 50px;
  width:100%;
  height:auto;
}
section#contact .section-heading {
  color: #fff;
}
section#contact form#contactForm .form-group {
  margin-bottom: 2.5rem;
}
section#contact form#contactForm .form-group input,
section#contact form#contactForm .form-group textarea {
  padding: 2.25rem;
  line-height:0px;
}
section#contact form#contactForm .form-group input.form-control {
  height: 100px;
}
section#contact form#contactForm .form-group-textarea {
  height: 100%;
}
section#contact form#contactForm .form-group-textarea textarea {
  height: 100%;
  min-height: 10rem;
}
section#contact form#contactForm p.help-block {
  margin: 0;
}
section#contact form#contactForm .form-control:focus {
  border-color: #ced4da;
  box-shadow: none;
}
section#contact form#contactForm ::-webkit-input-placeholder {
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
  color: #fff;
}
section#contact form#contactForm :-moz-placeholder {
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
  color: #fff;
}
section#contact form#contactForm ::-moz-placeholder {
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
  color: #fff;
}
section#contact form#contactForm :-ms-input-placeholder {
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
  color: #fff;
}

.footer {
  text-align: center;
  font-size: 0.9rem;
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

